--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://www.toptal.com/developers/gitignore/api/nextjs,monorepo,nest
 
+# packages
+.turbo
+.eslintrc.json
+
 # monorepo
 .pnpm-store
 pnpm-debug.log
@@ -7,6 +11,7 @@ pnpm-log.json
 pnpm-errors.log
 .next
 .vercel
+.env
 .env.local
 .env.development.local
 .env.production.local
