--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,11 @@
 {
-    "compilerOptions": {
-        "target": "ES2022",
-        "module": "commonjs",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "baseUrl": ".",
-        "paths": {
-            "@validation/*": [
-                "packages/validation/src/*"
-            ]
+    "files": [],
+    "references": [
+        {
+            "path": "packages/validation"
+        },
+        {
+            "path": "apps/api"
         }
-    }
+    ]
 }
