feat: restructure application by removing default home page and adding a new Navbar and ThemeSwitch components
- Deleted the default home page component (page.tsx).
- Added a Navbar component for navigation with links to Home, About, and Contact pages.
- Introduced a ThemeSwitch component to toggle between light and dark themes.
- Created a Providers component to wrap the application with ThemeProvider for theme management.
- Added utility functions for class name merging.
- Implemented custom button and switch UI components using Radix UI.
- Updated global styles to support dark mode and custom theming.
- Added necessary dependencies for new components and utilities.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "dev:api": "turbo run dev --filter=@tomi/validation --filter=api",
+    "dev:web": "turbo run dev --filter=web",
     "build": "turbo run build",
     "lint": "turbo run lint"
   },
