--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,9 +16,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-query": "^5.85.9",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.2",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
@@ -26,12 +29,13 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@tomi/validation": "workspace:*",
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
+    "@tomi/validation": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
