feat(api): adicionar documentação Swagger e atualizar DTOs de usuário e tarefa

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "@tomi/ts-config/nestjs.json",
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist",
+    "baseUrl": ".",
+    "rootDir": ".",
+    "outDir": "dist",
     "composite": true
   },
   "references": [
