--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "turbo run dev",
     "dev:api": "turbo run dev --filter=@tomi/validation --filter=api",
     "dev:web": "turbo run dev --filter=web",
-    "build": "turbo run build",
+    "build": "turbo run build --cache=local:r,remote:r",
     "lint": "turbo run lint"
   },
   "devDependencies": {
