fix(build): corrige problema com tracking do git no arquivo tsconfig.buildinfo causando problemas em novas instalações

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 .turbo
 .eslintrc.json
 tsconfig*.json
-*tsconfig*.tsbuildinfo
+*tsconfig*
+*tsconfig.tsbuildinfo*
+*.tsbuildinfo
+
 
 # monorepo
 .pnpm-store
